--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8"
         <meta name="viewport" content="width=device-width"/>
         <title>My test page</title
+        <link href="styles/style.css" rel="stylesheet"/>
     <head>
     <body>
         <h1>Test Site!!!</h1>
@@ -16,5 +17,16 @@
         </ul>
         <p> Read about <a href="https://www.imdb.com/name/nm1078479/">John Cena</a> movie career to learn more!!
         </p>
+        h1 {
+            font-size: 60px;
+            text-align: center;
+          }
+          p,
+          li {
+            font-size: 16px;
+            line-height: 2;
+            letter-spacing: 1px;
+          }
+          
     </body>
 </html>
