--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en-US"
     <head>
-        <meta charset="utf-8"
+        <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
-        <title>My test page</title
+        <title>My test page</title>
         <link href="styles/style.css" rel="stylesheet"/>
     <head>
     <body>
